<resources>
    <string name="app_name">Yosin surasi</string>
    <string name="settings">Sozlamalar</string>
    <string name="about">Haqida</string>
    <string name="tajvid_qoidalari">Tajvid qoidalari</string>
    <string name="about_surah_text"> Sura haqida</string>
    <string name="arabiy">Arabiy</string>
    <string name="ayat">oyat</string>
    <string name="transkription">Transkripsiya</string>
    <string name="meaning_tv">Ma\'nosi</string>
    <string name="yozuvni_tanlang" translatable="false">Yozuvni tanlang</string>
    <string name="meaning_twenty_seven">Robbim meni mag‘firat etganini va ikrom qilinganlardan qilganini», dedi. (Iymoni va ixlosi tufayli Alloh taolo o‘z fazli va karami ila u bandani jannatga hukm qildi. U banda jannatga kirib, nozu ne\\\'matlarni va izzat-ikromni ko‘rishi bilan qavmini esladi. «Koshki qavmim bilsalar edi. Robbim meni mag‘firat etganini va ikrom qilinganlardan qilganini», dedi».)</string>
    <string name="tr_27">Va ma anzalna \'ala qovmihi mim-ba\'dihi min jundim-mina-s-sama\'i va ma kunna munzilin.</string>
    <string name="oqish_rejimi">O\'qish rejimi</string>
</resources>