<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_bottom_sheet_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="24dp">


    <CheckBox
        android:id="@+id/settings_arabic_chb"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:checked="true"
        android:lines="1"
        android:text="@string/arabiy"
        app:layout_constraintEnd_toStartOf="@id/settings_arabic_sb"
        app:layout_constraintHorizontal_weight=".3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/settings_arabic_sb"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:max="40"
        app:layout_constraintBottom_toBottomOf="@id/settings_arabic_chb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight=".7"
        app:layout_constraintStart_toEndOf="@id/settings_arabic_chb"
        app:layout_constraintTop_toTopOf="@id/settings_arabic_chb" />


    <CheckBox
        android:id="@+id/settings_transcription_text_chb"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:checked="false"
        android:lines="1"
        android:text="@string/transkription"
        app:layout_constraintEnd_toStartOf="@id/settings_transcription_text_sb"
        app:layout_constraintHorizontal_weight=".3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_arabic_chb" />

    <SeekBar
        android:id="@+id/settings_transcription_text_sb"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:max="40"
        app:layout_constraintBottom_toBottomOf="@id/settings_transcription_text_chb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight=".7"
        app:layout_constraintStart_toEndOf="@id/settings_arabic_chb"
        app:layout_constraintTop_toTopOf="@id/settings_transcription_text_chb" />

    <CheckBox
        android:id="@+id/settings_meaning_text_chb"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:checked="true"
        android:lines="1"
        android:text="@string/meaning_tv"
        app:layout_constraintEnd_toStartOf="@id/settings_meaning_sb"
        app:layout_constraintHorizontal_weight=".3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_transcription_text_chb" />

    <SeekBar
        android:id="@+id/settings_meaning_sb"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:max="40"
        app:layout_constraintBottom_toBottomOf="@id/settings_meaning_text_chb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight=".7"
        app:layout_constraintStart_toEndOf="@id/settings_meaning_text_chb"
        app:layout_constraintTop_toTopOf="@id/settings_meaning_text_chb" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_meaning_text_chb">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:foreground="?selectableItemBackground"
            android:onClick="setCyrillic"
            app:cardCornerRadius="6dp"
            app:cardElevation="3dp"
            tools:ignore="UsingOnClickInXml">

            <TextView
                android:id="@+id/settings_cyrillic_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="24dp"
                android:paddingVertical="12dp"
                android:text="Kirill" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:foreground="?selectableItemBackground"
            android:onClick="setLatin"
            app:cardCornerRadius="6dp"
            app:cardElevation="3dp"
            tools:ignore="UsingOnClickInXml">

            <TextView
                android:id="@+id/settings_latin_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/purple_500"
                android:paddingHorizontal="24dp"
                android:paddingVertical="12dp"
                android:text="Lotin"
                android:textColor="@color/white" />

        </androidx.cardview.widget.CardView>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>