<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.SettingsActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="#CFCFCF"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp">

            <TextView
                android:id="@+id/item_surah_arabic_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/me_quran_volt_newmet"
                android:padding="6dp"
                android:text="@string/arabic_twenty_seven"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/item_surah_transcription_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:paddingVertical="6dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:visibility="gone"
                tools:text="@string/app_name" />

            <TextView
                android:id="@+id/item_surah_meaning_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="6dp"
                android:text="@string/meaning_twenty_seven"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/custom_bg"
                    android:orientation="horizontal"
                    android:paddingHorizontal="6dp"
                    android:paddingVertical="3dp">

                    <TextView
                        android:id="@+id/item_surah_verse_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="27"
                        android:textColor="@color/white" />

                    <View
                        android:layout_width="0.5dp"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="3dp"
                        android:background="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1"
                        android:textColor="@color/white" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".1"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/item_surah_share_img"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_gravity="end"
                        android:background="@drawable/custom_circle_button"
                        android:padding="6dp"
                        android:src="@drawable/ic_baseline_share_24" />

                    <ImageView
                        android:id="@+id/item_surah_copy_img"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginHorizontal="12dp"
                        android:background="@drawable/custom_circle_button"
                        android:padding="6dp"
                        android:src="@drawable/ic_baseline_content_copy_24" />

                    <ImageView
                        android:id="@+id/item_surah_play_img"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_gravity="end"
                        android:background="@drawable/custom_circle_button"
                        android:padding="6dp"
                        android:src="@drawable/ic_baseline_play_arrow_24" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingVertical="16dp"
        >

        <CheckBox
            android:id="@+id/settings_arabic_chb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:lines="1"
            android:text="@string/arabiy"
            android:checked="true"
            app:layout_constraintEnd_toStartOf="@id/settings_arabic_sb"
            app:layout_constraintHorizontal_weight=".3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <SeekBar
            android:id="@+id/settings_arabic_sb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/settings_arabic_chb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight=".7"
            android:max="40"
            app:layout_constraintStart_toEndOf="@id/settings_arabic_chb"
            app:layout_constraintTop_toTopOf="@id/settings_arabic_chb" />


        <CheckBox
            android:id="@+id/settings_transcription_text_chb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:lines="1"
            android:checked="false"
            android:text="@string/transkription"
            app:layout_constraintEnd_toStartOf="@id/settings_transcription_text_sb"
            app:layout_constraintHorizontal_weight=".3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_arabic_chb" />

        <SeekBar
            android:id="@+id/settings_transcription_text_sb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/settings_transcription_text_chb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight=".7"
            android:max="40"
            app:layout_constraintStart_toEndOf="@id/settings_arabic_chb"
            app:layout_constraintTop_toTopOf="@id/settings_transcription_text_chb" />

        <CheckBox
            android:id="@+id/settings_meaning_text_chb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:lines="1"
            android:checked="true"
            android:text="@string/meaning_tv"
            app:layout_constraintEnd_toStartOf="@id/settings_meaning_sb"
            app:layout_constraintHorizontal_weight=".3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_transcription_text_chb" />

        <SeekBar
            android:id="@+id/settings_meaning_sb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/settings_meaning_text_chb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight=".7"
            android:max="40"
            app:layout_constraintStart_toEndOf="@id/settings_meaning_text_chb"
            app:layout_constraintTop_toTopOf="@id/settings_meaning_text_chb" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:foreground="?selectableItemBackground"
                android:onClick="setCyrillic"
                app:cardCornerRadius="6dp"
                app:cardElevation="3dp"
                tools:ignore="UsingOnClickInXml">

                <TextView
                    android:id="@+id/settings_cyrillic_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="24dp"
                    android:paddingVertical="12dp"
                    android:text="Kirill" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:foreground="?selectableItemBackground"
                android:onClick="setLatin"
                app:cardCornerRadius="6dp"
                app:cardElevation="3dp"
                tools:ignore="UsingOnClickInXml">

                <TextView
                    android:id="@+id/settings_latin_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/purple_500"
                    android:paddingHorizontal="24dp"
                    android:paddingVertical="12dp"
                    android:text="Lotin"
                    android:textColor="@color/white" />

            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>